<resources>
    <string name="app_name">Endeavour</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully,Please LOGIN</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="default_notification_channel_id">Notification</string>
    <string name="fcm_message">Notification</string>
    <string name="desc_speakers">Hello World</string>
    <string name="ecell_intro">KIET e-Cell is a student body of Krishna Institute of Engineering and Technology, formed in 2014 with the aim to promote an entrepreneurial culture among students of technical streams, and encouraging the entrepreneurial minds of the students to convert their drop of idea into an ocean of reality.
Through its various activities and events, the Entrepreneurship Cell of KIET strives to enrich their knowledge in the domain of management and technology intervention, and overall ecosystem development for innovation and entrepreneurship.</string>
    <string name="Vision">We work with a vision to develop a spirit of entrepreneurship among the students of KIET and to support budding entrepreneurs in the exciting and rigorous journey they dare to take.</string>
    <string name="whatwedo">We support the idea of student-led entrepreneurship in the institute. We incite and encourage them to take up entrepreneurial challenges, and assist them in their endeavours to launch and run business ventures. The events conducted by us focus on creating awareness on entrepreneurship, encouraging technology incubation which are culminated by holding an annual event ENDEAVOUR, a Techno-Entrepreneurial Fest to provide a platform to students of different colleges to interact and compete with each other.</string>
    <string name="whosupportus">We are aided by the counsel and backing of TBI-KIET (Technology Business Incubator-Government of India). We seek to benefit from the experiences of the capable experts here and give entrepreneurship a comprehensive boost in order to address the needs of the society at large through institutionalized incubation support.</string>
    <string name="whyassociatewithus">Indian government has realised the need of new entrepreneurs for development in various fields. In accordance with this, Department of Science and Technology, Government of India, is very keen on developing Entrepreneurial Development bodies in all major educational institutions in India.
In this regard, KIET e-Cell aims at manifesting the latent entrepreneurial spirit of young entrepreneurs. It is quite active in motivating the technical undergraduate students to make ideas happen. Thus, any association with us will be symbiotic and mutually rewarding to both sides.</string>
    <string name="about_end">Our annual Techno-Entrepreneurial Summit, recognized as Endeavour, was initiated in 2015 and the rich legacy has been carried out from the past 5 years. It is embedded by technical, corporate and fun events as well as graced by guest lectures from eminent entrepreneurs and speakers. The ambition is to bring the entrepreneurial culture and introduction of the student as well as participant to the corporate world. The event is organised at inter-college level, due to which there is enormous competition between the participant, and wins the prizes worth thousands.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
