<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/L1"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Ecell"
        android:textColor="#000"
        android:textSize="28sp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="136dp"
        android:layout_height="match_parent"
        android:paddingRight="50dp"
        android:paddingBottom="5dp"
        android:src="@drawable/ecell"
        android:paddingTop="4dp"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/L2"

        >
    <ImageView
        android:id="@+id/close_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginTop="11dp"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_close_black_24dp" />
    </LinearLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/N1"
        android:layout_marginTop="10dp"
        android:layout_below="@id/L1"
        >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/L1"
    android:id="@+id/L3"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INTRODUCTION"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/ecell_intro"
        android:textColor="#000"
        android:textStyle="normal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VISION"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/Vision"
        android:textColor="#000"
        android:textStyle="normal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WHAT WE DO"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/whatwedo"
        android:textColor="#000"
        android:textStyle="normal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WHO SUPPORTS US"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/whosupportus"
        android:textColor="#000"
        android:textStyle="normal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WHY ASSOCIATE WITH US"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
android:id="@+id/last"
        android:layout_marginTop="10dp"
        android:text="@string/whyassociatewithus"
        android:textColor="#000"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/linked_in"
            android:src="@drawable/linkedin_icon" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/gmail"
            android:layout_marginStart="10dp"
            android:src="@drawable/mail_icon" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:id="@+id/fb"
            android:src="@drawable/facebook" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:id="@+id/insta"
            android:src="@drawable/instagram" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:id="@+id/you_tube"
            android:src="@drawable/youtube" />

    </LinearLayout>
</LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>